@@ -4,12 +4,15 @@ use strict;
 use FindBin qw($Bin);
 
 use lib 't/lib';
-use Test::Most tests => 6;
+use Test::Most tests => 7;
 
 use_ok('Database::test1');
 use_ok('Database::test2');
 
 Database::Abstraction::init({ directory => "$Bin/../data" });
+
+my $defaults = Database::Abstraction::init();
+cmp_ok($defaults->{'directory'}, 'eq', "$Bin/../data");
 
 my $test1 = new_ok('Database::test1');
 my $test2 = new_ok('Database::test2');
